epipelagic layer info

--- a/ocean_layers/index.html
+++ b/ocean_layers/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Layers of the Ocean</title>
+        <title>Marinorama</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
@@ -33,7 +33,7 @@
 	        	>
 		        	<div class="hsContainer">
 			    		<div class="hsContent" data-center="bottom: 200px; opacity: 1" data-top="bottom: 1200px; opacity: 0" data-anchor-target="#slide-1 h2">
-				    		<h2>Layers of the Ocean</h2>
+				    		<h2>Marinorama<br>Layers of the Ocean</h2>
 			    		</div>
 		        	</div>
 	        	</div>
@@ -54,6 +54,7 @@
 			    			data-anchor-target="#slide-2"
 			    		>
 				    		<h2>Epipelagic</h2>
+                <p>The only zone of the ocean on which sunlight shines, the epipelagic zone is the most diverse layer in both its wildlife and climate. It extends about 200 m (660 ft) from the surface and is the only area in the ocean where plants can perform photosynthesis, making it rich in oxygen. However, as most sediment sinks to the bottom of the sea, the epipelagic zone is relatively low in nutrients. Most of the fish, mammals, plankton, and plants in the ocean are found in this area.</p>
 			    		</div>
 			    	</div>
 				</div>
@@ -116,7 +117,7 @@
 							data-top="opacity: 1"  
 							data-anchor-target="#slide-4"
 						>
-				    		<h2>Bathylpelagic</h2>
+				    		<h2>Bathypelagic</h2>
 			    		</div>
 			    	</div>
 			    	
