some more cursors

--- a/ocean_layers/index.html
+++ b/ocean_layers/index.html
@@ -117,14 +117,15 @@
 				<div class="bcg" 
 					data-center="background-position: 50% 10px;" 
 					data-top-bottom="background-position: 50% -100px;" 
-					data-bottom-top="background-position: 50% 100px;"  
+					data-bottom-top="background-position: 50% 100px;" 
 					data-anchor-target="#slide-4"
 				>
 			    	<div class="hsContainer">
 						<div class="hsContent" 
+							data--50-bottom="opacity: 0;" 
+							data--200-bottom="opacity: 1;" 
 							data-center="opacity: 1" 
-			    			data-center-top="opacity: 0" 
-			    			data--100-bottom="opacity: 0;" 
+							data-200-top="opacity: 0" 
 							data-anchor-target="#slide-4"
 						>
 				    		<h2>Bathypelagic</h2>
@@ -150,7 +151,7 @@
 							data-anchor-target="#slide-5"
 						>
 				    		<h2>Abyssopelagic</h2>
-              <p>Even more daunting than the bathypelagic zone is the abyssopelagic zone. From 4000m (13,100ft) deep to the ocean floor, the water pressure is crushing and the temperature is near-freezing. Exploration is very difficult for humans due to these conditions. Fish are very rare in this layer, and those that do survive have adaptations such as gaping mouths that allow them to eat as much food as possible. It is mainly populated by invertebrates such as starfish and squids. Three-fourths of the ocean floor is found in the abyssopelagic zone. Scientists used to believe that all life was dependant on photosynthesis, but research about this eternally dark abyss has shown the possibility of the earliest life forms being based off of chemosynthesis.</p>
+              <p>Even more daunting than the bathypelagic zone is the abyssopelagic zone. From 4000m (13,100ft) deep to the ocean floor, the water pressure is crushing and the temperature is near-freezing. Exploration is very difficult for humans due to these conditions. This layer is mainly populated by invertebrates such as starfish and squids, but some fish are able to live here. Three-fourths of the ocean floor is found in the abyssopelagic zone. Scientists used to believe that all life was dependant on photosynthesis, but research about this eternally dark abyss has shown the possibility of the earliest life forms being based off of chemosynthesis.</p>
 			    		</div>
 			    	</div>
 			    	
@@ -172,7 +173,7 @@
 							data-anchor-target="#slide-6"
 						>
 				    		<h2>Hadalpelagic</h2>
-              <p>The final layer is the hadalpelagic zone. Named after Hades, the Greek god of death, this zone is made up of all the deep sea trenches below the abyssopelagic zone. Due to even more intense pressure and frigid temperatures, research of this zone is limited. It is hard to classify this zone since many trenches are isolated from each other and therefore have their own ecosystems. However, this also means that the hadalpelagic zone may have more diversity than the zones above it despite the seemingly impossible living conditions. As of 2014, 400 different species have been found to live in this zone.</p>
+              <p>The final layer is the hadalpelagic zone. Named after Hades, the Greek god of death, this zone is made up of all the deep sea trenches below the abyssopelagic zone. Due to even more intense pressure and frigid temperatures, research of this zone is limited. It is hard to classify this zone since many trenches are isolated from each other and therefore have their own ecosystems. However, this also means that the hadalpelagic zone may have more diversity than the zones above it despite the seemingly impossible living conditions. Starfish and tube worms, for instance, are populous in hadal trenches. As of 2014, 400 different species have been found to live in this zone.</p>
 			    		</div>
 			    	</div>
 			    	
@@ -195,7 +196,7 @@
 						>
 				    		<h2>Fun Facts</h2>
               <ul>
-                <li>The oceans makes up almost 71% of the Earth's surface.</li>
+                <li>The ocean makes up almost 71% of the Earth's surface.</li>
                 <li>More than 97% of all the planet's water is found in the ocean</li>
                 <li>About 99% of organisms on Earth live in the ocean, yet humans have only explored about 10% of it.</li>
                 <li>The Great Barrier Reef is a natural ecosystem made up of corals, making the largest living structure on Earth. It measures about 2000km (1,243mi) and is even visible from space.</li>
